# CorpusBenchmarking

./: README.md  pyproject.toml  requirements.txt
configs/: AnatEM.yaml  BC5CDR.yaml  BioID.yaml  CHEMDNER.yaml  CRAFT.yaml  CellLink.yaml  JNLPBA.yaml  NCBI_Disease.yaml  NLM_Chem.yaml  basic_corpus_stats.yaml  metadata_stats.yaml  overlap_stats.yaml  terminology_coverage.yaml
output/: basic_corpus_stats.json  corpus_dashboard.html  metadata_stats.json  overlap_stats.json  terminology_coverage_stats.json
scripts/: check.sh  download_AnatEM.sh  download_BC5CDR.sh  download_BioID.sh  download_CHEMDNER.sh  download_CRAFT.sh  download_CellLink.sh  download_JNLPBA.sh  download_MeSH.sh  download_NCBI_disease.sh  download_NLM_Chem.sh  update_output.sh
src/: corpus_dashboard_py.py  merge_json.py  mesh_tree_counts.py  prepare_BioID.py
src/corpus_benchmark/: __init__.py  acquisition.py  builtins.py  cli.py  context.py  dashboard.py  metadata_handler.py  parsing.py  registry.py  results.py  runner.py  workspace.py
src/corpus_benchmark/loaders/: __init__.py  bioc_loader.py  converters.py  knowtator_loader.py  splits.py  standoff_loader.py  terminology_loaders.py
src/corpus_benchmark/metadata/: CrossRef_document_fetcher.py  crossref_document_fetcher.py  document_fetcher.py  document_metadata.py  eUtils_document_fetchers.py  eutils_client.py  journal_fetcher.py  (+5 more)
src/utils/: json_diff.py
tests/: test_document_fetcher_registry.py  test_eutils_journal_metadata.py  test_json_record_store.py  test_record_store.py  test_results_serialization.py  test_terminology_loaders.py
(+13 files in other folders)
